--- a/resources/views/layouts/sidebar.gohtml
+++ b/resources/views/layouts/sidebar.gohtml
@@ -1,7 +1,9 @@
 {{define "sidebar"}}
 <div class="col-md-3 blog-sidebar ">
   <div class="p-4 mb-3 bg-white rounded shadow-sm">
-    <h1>GoBlog</h1>
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand mb-0 h1" href="{{ RouteName2URL "home"}}">GoBlog</a>
+    </nav>
     <p class="mb-0">摒弃世俗浮躁，追求技术精湛</p>
   </div>
 
