add: 把“删除/编辑”按钮添加到首页列表

--- a/resources/views/articles/index.gohtml
+++ b/resources/views/articles/index.gohtml
@@ -9,7 +9,20 @@
 
     <div class="blog-post  bg-white p-5 rounded shadow mb-4">
 
-      {{template "article-meta" $article }}
+
+      <div style="display: flex;flex-direction: row">
+        {{template "article-meta" $article }}
+        {{/*      {{ if .CanModifyArticle }}*/}}
+        <div style="margin-left:auto;">
+          <form action="{{ RouteName2URL "articles.delete" "id" $article.GetStringID }}" method="post">
+            <button type="submit" onclick="return confirm('删除动作不可逆，请确定是否继续')" class="btn btn-outline-danger btn-sm">删除</button>
+            <a href="{{ RouteName2URL "articles.edit" "id" $article.GetStringID }}" class="btn btn-outline-secondary btn-sm">编辑</a>
+          </form>
+        </div>
+
+        {{/*      {{end}}*/}}
+      </div>
+
 
       <hr>
       <!-- 用marked渲染-->
