add: 未登录用户无法查看文章

--- a/resources/views/layouts/sidebar.gohtml
+++ b/resources/views/layouts/sidebar.gohtml
@@ -7,23 +7,27 @@
     <p class="mb-0">摒弃世俗浮躁，追求技术精湛</p>
   </div>
 
-  <div class="p-4 bg-white rounded shadow-sm mb-3">
-    <h5>分类</h5>
-    <ol class="list-unstyled mb-0">
-      {{ range $key, $category := .Categories }}
-        <li><a href="{{ $category.Link }}">{{ $category.Name }}</a></li>
-      {{ end }}
-      <li><a href="{{ RouteName2URL "categories.create" }}">+ 新建分类</a></li>
-    </ol>
-  </div>
+{{/*  <div class="p-4 bg-white rounded shadow-sm mb-3">*/}}
+{{/*    <h5>分类</h5>*/}}
+{{/*    <ol class="list-unstyled mb-0">*/}}
+{{/*      {{ range $key, $category := .Categories }}*/}}
+{{/*        <li><a href="{{ $category.Link }}">{{ $category.Name }}</a></li>*/}}
+{{/*      {{ end }}*/}}
+{{/*      <li><a href="{{ RouteName2URL "categories.create" }}">+ 新建分类</a></li>*/}}
+{{/*    </ol>*/}}
+{{/*  </div>*/}}
+
+{{/*  <div class="p-4 bg-white rounded shadow-sm mb-3">*/}}
+{{/*    <h5>作者</h5>*/}}
+{{/*    <ol class="list-unstyled mb-0">*/}}
+{{/*      <li><a href="#">Summer</a></li>*/}}
+{{/*      <li><a href="#">Aufree</a></li>*/}}
+{{/*      <li><a href="#">Monkey</a></li>*/}}
+{{/*    </ol>*/}}
+{{/*  </div>*/}}
 
   <div class="p-4 bg-white rounded shadow-sm mb-3">
-    <h5>作者</h5>
-    <ol class="list-unstyled mb-0">
-      <li><a href="#">Summer</a></li>
-      <li><a href="#">Aufree</a></li>
-      <li><a href="#">Monkey</a></li>
-    </ol>
+    <h5>时间轴</h5>
   </div>
 
   <div class="p-4 bg-white rounded shadow-sm mb-3">
