--- a/resources/views/articles/index.gohtml
+++ b/resources/views/articles/index.gohtml
@@ -12,15 +12,18 @@
 
       <div style="display: flex;flex-direction: row">
         {{template "article-meta" $article }}
-        {{/*      {{ if .CanModifyArticle }}*/}}
-        <div style="margin-left:auto;">
-          <form action="{{ RouteName2URL "articles.delete" "id" $article.GetStringID }}" method="post">
-            <button type="submit" onclick="return confirm('删除动作不可逆，请确定是否继续')" class="btn btn-outline-danger btn-sm">删除</button>
-            <a href="{{ RouteName2URL "articles.edit" "id" $article.GetStringID }}" class="btn btn-outline-secondary btn-sm">编辑</a>
-          </form>
-        </div>
+          {{ if .CanModifyArticle }}
+            <div style="margin-left:auto;">
+              <form action="{{ RouteName2URL "articles.delete" "id" $article.GetStringID }}" method="post">
+                <button type="submit" onclick="return confirm('删除动作不可逆，请确定是否继续')" class="btn btn-outline-danger btn-sm">删除</button>
+                <a href="{{ RouteName2URL "articles.edit" "id" $article.GetStringID }}" class="btn btn-outline-secondary btn-sm">编辑</a>
+                {{ if .IsStared }}
+                  <button type="button" class="btn btn-outline-info btn-sm">收藏</button>
+                {{ end }}
+              </form>
+            </div>
+          {{end}}
 
-        {{/*      {{end}}*/}}
       </div>
 
 
